# CRTSolver

./: pyproject.toml
reports/: latex_table.txt
results/: combined_results.csv  results_CRTSolver (Bit-Vector Mode).csv  results_CRTSolver (Finite Field Mode).csv  results_CRTSolver (Integer Mode).csv  results_Z3.csv  results_cvc5.csv
src/crtsolver/crt_components/engine/: modulo_ff.py
src/crtsolver/crt_components/helpers/: dto.py  utility.py
src/crtsolver/solvers/: crt_solver.py
