[project]
name = "crtsolver"
version = "1.1.0"
description = "Solving non-linear integer problems using the Chinese Remainder Theorem"
authors = [
    {name = "maheenmatin",email = "maheenmatin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "cvc5 (>=1.2.1,<1.4)",
    "z3-solver (>=4.14.1.0,<4.16)",
    "numpy (>=2.2,<2.3)",
    "pandas (>=2.2,<2.3)",
    "matplotlib (>=3.10,<3.11)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
jupyter = "^1.1.1"

[project.scripts]
crt-solver = "crtsolver.solvers.crt_solver:main"
cvc5-solver = "crtsolver.solvers.cvc5_solver:main"
z3-solver = "crtsolver.solvers.z3_solver:main"
